--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="./favicon.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat-appyt</title>
+    <title>Chit Chat</title>
   </head>
   <body>
     <div id="root"></div>
